--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>webpack App</title>
+  </head>
+  <body>
+      <h1>Avalon-Insurgents</h1>
+  </body>
+</html>
