added basic routing

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>webpack App</title>
+    <title>Avalon Insurgents</title>
   </head>
   <body>
-      <h1>Avalon-Insurgents</h1>
+      <h1>Avalon-Insurgents Tech Blogs</h1>
+      <h2><a href="Blogs/JavaRESTAPI.html">Java REST API</a></h2>
   </body>
 </html>
